# verisbelt

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  Makefile.using_opam.coq  Makefile.using_opam.coq.conf  README.md  VERUS-IMPL.md  _CoqProject  _CoqProject_using_opam  _RocqProject  rocq-verusbelt.opam
.github/workflows/: build.yml
doc/: factoring_props.html  guard.html  guard_later_pers.html  index.html  lifetime_full.html  lifting.html  make-coqdoc.sh  non_atomic_cell_map.html
docker-contents/: setup-rocq.sh
src/eris/: VENDORED.md
src/eris/base_logic/: error_credits.v
src/eris/common/: ectx_language.v  ectxi_language.v  erasable.v  exec.v  language.v
src/eris/eris/: adequacy.v  ectx_lifting.v  lifting.v  weakestpre.v
src/eris/prelude/: Coquelicot_ext.v  NNRbar.v  Reals_ext.v  Series_ext.v  fiber_bounds.v  fin.v  iris_ext.v  mc_stdlib.v  stdpp_ext.v  tactics.v  uniform_list.v
src/eris/prob/: countable_sum.v  couplings.v  couplings_app.v  couplings_dp.v  couplings_exp.v  distribution.v  generic_lifting.v  graded_predicate_lifting.v  markov.v  mdp.v
src/guarding/: factoring_props.v  guard.v  guard_later_pers.v  own_and.v  own_and_own_sep.v
src/guarding/internal/: auth_frag_util.v  factoring_upred.v  inved.v  na_invariants_fork.v  wsat_util.v
src/guarding/lib/: boxes.v  cancellable.v  fractional.v  lifetime.v  non_atomic_map.v  rwlock.v
src/guarding/storage_protocol/: base_storage_opt.v  protocol.v
src/lambda_verus/lang/: adequacy.v  adequacy_prob.v  heap.v  heap_prob.v  lang.v  lifting.v  notation.v  prob_lang.v  proofmode.v  races.v  syntax.v  tactics.v  time.v
src/lambda_verus/lifetime/: lifetime_full.v
src/lambda_verus/prophecy/: prophecy.v
src/lambda_verus/typing/: atomic_inv.v  base.v  bool.v  borrow.v  fixpoint.v  function.v  int.v  inv_context.v  lft_contexts.v  lifetime.v  pcell.v  pptr.v  product_split.v  programs.v  programs_util.v  protocol.v  (+14 more)
src/stdpp/: CHANGELOG.md
(+83 files in other folders)
