opam-version: "2.0"
synopsis: "VerusBelt: A Semantic Foundation for Verus's Proof-Oriented Extensions to the Rust Type System"
maintainer: ["ahuoguo@gmail.com"]
authors: ["VerusBelt authors"]
license: "BSD-3-Clause"
tags: ["separation logic" "rust" "verus"]
homepage: "https://github.com/ahuoguo/verisbelt"
bug-reports: "https://github.com/ahuoguo/verisbelt/issues"
dev-repo: "git+https://github.com/ahuoguo/verisbelt.git"
depends: [
  "rocq-core" {>= "9.1.1" & < "9.2~"}
  "rocq-stdlib" {>= "9.0.0" & < "9.2~"}
  "rocq-stdpp" {= "1.13.0"}
  # NOTE: Amin's branch declares a strict stdpp dev constraint in its
  # own opam file, but its Rocq source is compatible with stdpp 1.13.0.
  # Install with: [opam install . --ignore-constraints-on=rocq-stdpp]
  "rocq-iris" {= "dev"}
  "coq-coquelicot" {= "3.4.4"}
  "coq-autosubst" {= "dev"}
  "coq-mathcomp-ssreflect" {= "2.5.0"}
  "coq-mathcomp-solvable" {= "2.5.0"}
  "coq-mathcomp-analysis" {= "1.14.0"}
  "odoc" {with-doc}
]
pin-depends: [
  [ "rocq-iris.dev"
    "git+https://gitlab.mpi-sws.org/amintimany/iris-coq.git#improve-later-credits" ]
]
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
